# Neural-Monkey

./: README.md  setup.cfg
docs/: index.md
monkey/: __init__.py  activations.py  attention.py  globals.py  models.py  nn.py  optimizers.py
neural_monkey.egg-info/: PKG-INFO  SOURCES.txt
tests/: XOR.py  test.py
