[metadata]
name = neural-monkey
version = 0.3.0
author = Neunix Studios
author_email = neunixstudios@gmail.com
description = A neural network library for beginners. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/19919rohit/Neural-Monkey
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]